--- a/Dateien/main.css
+++ b/Dateien/main.css
@@ -153,21 +153,19 @@ main {
 #slide-2 .bcg {background: none; background-color: #010101; height: 310px; text-align: center}
 
 /* Slide 3 */
-#slide-3 .bcg {background-image:url('../img/bcg_slide-3.jpg')}
-
+#slide-3 .bcg {background-image:url('../img/bcg_slide-2.jpg')}
 
 /* Slide 4 */
-.curtainContainer {width: 100%; height: 100%; position: relative;}
-.curtainContainer .curtain {width: 300%; height: 1px; background-color: #000000; position: absolute; top: 25%; left: 0; opacity: 0}
-.curtainContainer .copy {position: absolute; bottom: 30%; left: 0; width: 100%; text-align: center;}
-
-#slide-4 .bcg {background-image:url('../img/bcg_slide-4.jpg')}
+#slide-4 .bcg #slide-2 .bcg {background: none; background-color: #010101; height: 310px; text-align: center}
 
 /* Slide 5 */
-#slide-5 {position: relative;}
-#slide-5 .bcg {background-image:url('../img/bcg_slide-5.jpg')}
-#slide-5 .bcg2 {background-image:url('../img/bcg_slide-5b.jpg'); position: fixed; bottom: 0; left: 0; opacity: 0; z-index: 1}
-#slide-5 .bcg3 {background: none; background-color: #010101; z-index: 2;  position: fixed; bottom: 0; left: 0; opacity: 0; z-index: 2}
+#slide-5 .bcg {background-image:url('../img/bcg_slide-3.jpg')}
+
+/* Slide 4 */
+#slide-6 .bcg #slide-6 .bcg {background: none; background-color: #010101; height: 310px; text-align: center}
+
+/* Slide 5 */
+#slide-7 .bcg {background-image:url('../img/bcg_slide-4.jpg')}
 
 .hsContainer {
 	display: table;
