--- a/Dateien/main.css
+++ b/Dateien/main.css
@@ -420,23 +420,34 @@ h2 {
 	z-index: 999999
 }
 
-.socialLinks {
-	position: fixed;
-	top: 20px;
-	right: 20px;
-	z-index: 1000000;
-}
-
 /* ==========================================================================
    EXAMPLE Media Queries for Responsive Design.
    These examples override the primary ('mobile first') styles.
    Modify as content requires.
    ========================================================================== */
 
-@media only screen and (min-width: 35em) {
-/* Style adjustments for viewports that meet the condition */
+@media screen and (max-width: 54em) {
+	section {
+		min-width: 560px;
+		opacity: 0;
+	}
+	.hsContent h2,  .copy h2 {
+		font-size: 30px;
+		line-height: 25px;
+	}
+	.hsContent p {
+		width: 560px;
+	}
+	
+	h1 {
+		font-size: 30px;
+	}
+	.entry-header .inner {
+		width: 560px;
+	}
 }
- @media print,  (-o-min-device-pixel-ratio: 5/4),  (-webkit-min-device-pixel-ratio: 1.25),  (min-resolution: 120dpi) {
+
+@media print,  (-o-min-device-pixel-ratio: 5/4),  (-webkit-min-device-pixel-ratio: 1.25),  (min-resolution: 120dpi) {
 /* Style adjustments for high resolution devices */
 }
 
@@ -446,49 +457,49 @@ h2 {
    ========================================================================== */
 
 @media print {
-* {
-	background: transparent !important;
-	color: #000 !important; /* Black prints faster: h5bp.com/s */
-	box-shadow: none !important;
-	text-shadow: none !important;
-}
-a,  a:visited {
-	text-decoration: underline;
-}
-a[href]:after {
-	content: " (" attr(href) ")";
-}
-abbr[title]:after {
-	content: " (" attr(title) ")";
-}
-/*
-     * Don't show links for images, or javascript/internal links
-     */
-
-    .ir a:after,  a[href^="javascript:"]:after,  a[href^="#"]:after {
-	content: "";
-}
-pre,  blockquote {
-	border: 1px solid #999;
-	page-break-inside: avoid;
-}
-thead {
-	display: table-header-group; /* h5bp.com/t */
-}
-tr,  img {
-	page-break-inside: avoid;
-}
-img {
-	max-width: 100% !important;
-}
- @page {
- margin: 0.5cm;
-}
-p,  h2,  h3 {
-	orphans: 3;
-	widows: 3;
-}
-h2,  h3 {
-	page-break-after: avoid;
-}
+	* {
+		background: transparent !important;
+		color: #000 !important; /* Black prints faster: h5bp.com/s */
+		box-shadow: none !important;
+		text-shadow: none !important;
+	}
+	a,  a:visited {
+		text-decoration: underline;
+	}
+	a[href]:after {
+		content: " (" attr(href) ")";
+	}
+	abbr[title]:after {
+		content: " (" attr(title) ")";
+	}
+	/*
+		 * Don't show links for images, or javascript/internal links
+		 */
+	
+		.ir a:after,  a[href^="javascript:"]:after,  a[href^="#"]:after {
+		content: "";
+	}
+	pre,  blockquote {
+		border: 1px solid #999;
+		page-break-inside: avoid;
+	}
+	thead {
+		display: table-header-group; /* h5bp.com/t */
+	}
+	tr,  img {
+		page-break-inside: avoid;
+	}
+	img {
+		max-width: 100% !important;
+	}
+	 @page {
+	 margin: 0.5cm;
+	}
+	p,  h2,  h3 {
+		orphans: 3;
+		widows: 3;
+	}
+	h2,  h3 {
+		page-break-after: avoid;
+	}
 }
