--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+@charset "utf-8";
 /* 
  _____   _           _         _                        _                  
 |_   _| | |         | |       | |                      | |                 
@@ -418,73 +419,6 @@ h2 {
 	top: 0;
 	left: 0;
 	z-index: 999999
-}
-
-/* ==========================================================================
-   EXAMPLE Media Queries for Responsive Design.
-   These examples override the primary ('mobile first') styles.
-   Modify as content requires.
-   ========================================================================== */
-
-@media screen and (max-width: 54em) {
-	.bcg {
-		background-size: 100% 50%;
-		background-position: 0 80px;
-		background-repeat: no-repeat;
-		padding-top: 40px;
-		padding-bottom: 30px;
-	}
-	section {
-		min-width: 500px;
-	}
-	section.homeSlide > div {
-	    background-position: 0 80px;
-	}
-	.hsContent h2,  .copy h2 {
-		padding-top: 70px;
-		font-size: 30px;
-		line-height: 40px;
-	}
-	.hsContent p {
-		width: 500px;
-	}
-	p {
-		font-size: 16px;
-	}
-	h1 {
-		font-size: 30px;
-		text-align: center;
-	}
-	.entry-header {
-		padding-top: 20px;
-		color: #ccab15;
-		background-color: inherit;
-		width: 100%;
-		position: relative;
-		z-index: 999999;
-	}
-	.entry-header .inner {
-		width: 560px;
-	}
-	section.homeSlide {
-	    height: 300px;
-	}
-	.hsContainer {
-		display: block;
-		table-layout: auto;
-		width: auto;
-		height: auto;
-		overflow: visible;
-		position: relative;
-	}
-	.hsContent {
-		max-width: none;
-		margin: inherit;
-		display: block;
-		vertical-align: middle;
-		color: #ebebeb;
-		padding: 0 8%;
-	}
 }
 
 @media print,  (-o-min-device-pixel-ratio: 5/4),  (-webkit-min-device-pixel-ratio: 1.25),  (min-resolution: 120dpi) {
