--- a/css/main.css
+++ b/css/main.css
@@ -54,10 +54,12 @@ body {
 
 hr {
 	display: block;
+	text-align:center; 
+	width: 66%;
 	height: 1px;
 	border: 0;
 	border-top: 1px solid #ccc;
-	margin: 1em 0;
+	margin: 1em auto;
 	padding: 0;
 }
 /*
@@ -133,7 +135,7 @@ main {
 	height: 100%;
 	width: 100%;
 	padding-top: 70px;
-	padding-bottom: 70px;
+	padding-bottom: 50px; /* -20px padding von p */
 	text-align: center;
 }
 
@@ -245,10 +247,9 @@ section.homeSlide>div {
 	color: #ebebeb;
 	padding: 0 8%;
 }
-.hsContent h2,  .copy h2 {
+.hsContent h2, .copy h2 {
 	color: #ffffff;
 	font-size: 50px;
-	line-height: 65px;
 	margin-bottom: 12px;
 }
 .hsContent p {
@@ -271,11 +272,18 @@ section.homeSlide>div {
 .text-center {
 	text-align:center;
 }
+.text-left {
+	text-align:left;
+}
+.zitat {
+	text-align:justify;
+}
 .impressum {
 	font-size: 16px;
 }
 p.fan {
 	margin-top: -20px;
+	text-align: right;
 }
 .hsContent p.fan-red {
 	color: #b35452;
